--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="Ie-edge"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio1</title>
     <link rel="stylesheet" href="style.css">
+    <title>Desafio1</title>
 </head>
 <body>
     <!--titulo inicial-->
@@ -42,7 +43,7 @@
           seus clientes, criando projetos personalizados, unindo a tradição<br>
          e a modernidade em nossos projetos.</p>
     </div>
- <img src="imagems/imagem.svg" alt="" id="imagem">
+ <img src="imagems/imagem.svg" alt="ERRO" id="imagem">
 
 </div>
  <!--menu-de-dados-->
